# simplelimiter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  tests.yaml
simplelimiter/: __init__.py
tests/: test_simplelimiter.py
