[tool.poetry]
name = "simplelimiter"
version = "0.1.0"
description = "Simple FastAPI rate limiter"
authors = ["Fabrizio Liotta"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.0"
fastapi = "^0.103.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
